# deadband

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  deadband.yaml  loopless.yaml  run_stream_test.sh  test_integration.sh  test_mock_upstream.py  test_stream_debug.py
cli/: Cargo.toml  deadband.yaml
cli/src/: dashboard.rs  main.rs
crates/deadband-adapter-crewai/: Cargo.toml
crates/deadband-adapter-crewai/src/: lib.rs
crates/deadband-adapter-langgraph/: Cargo.toml
crates/deadband-adapter-langgraph/src/: lib.rs  middleware.rs
crates/deadband-adapter-openai/: Cargo.toml
crates/deadband-adapter-openai/src/: lib.rs
crates/deadband-core/: Cargo.toml
crates/deadband-core/src/: context.rs  fingerprint.rs  gaslighter.rs  intervention.rs  lib.rs  metrics.rs  orchestrator.rs  policy.rs  replay.rs
crates/deadband-core/tests/: e2e_test.rs  semantic_test.rs
crates/deadband-observation/: Cargo.toml
crates/deadband-observation/src/: canonical.rs  detection.rs  event.rs  lib.rs  pipeline.rs  report.rs
crates/deadband-proxy/: Cargo.toml
crates/deadband-proxy/src/: config.rs  discovery.rs  lib.rs  main.rs  proxy.rs  request.rs  service.rs  sse.rs  watchdog.rs
crates/deadband-proxy/tests/: proxy_e2e_test.rs
crates/loopless-adapter-crewai/: Cargo.toml
crates/loopless-adapter-crewai/src/: lib.rs
crates/loopless-adapter-langgraph/: Cargo.toml
crates/loopless-adapter-langgraph/src/: middleware.rs
crates/loopless-adapter-openai/: Cargo.toml
crates/loopless-adapter-openai/src/: lib.rs
crates/loopless-core/: Cargo.toml
crates/loopless-core/src/: context.rs  intervention.rs  lib.rs  metrics.rs  orchestrator.rs  policy.rs  replay.rs
crates/loopless-core/tests/: e2e_test.rs  semantic_test.rs
crates/loopless-observation/: Cargo.toml
crates/loopless-observation/src/: detection.rs  history.rs  lib.rs  report.rs
examples/: crewai_example.py  langgraph_example.py  openai_agents_example.py
okf/: index.md  log.md
okf/adapters/: crewai.md  index.md  langgraph.md  openai-agents.md
okf/cli/: doctor.md  index.md  init.md  inspect.md  replay.md  trace.md  visualize.md
okf/components/: index.md  intervention-system.md  orchestrator.md  policy-engine.md  replay-system.md
okf/concepts/: architecture.md  index.md  overview.md
okf/configuration/: index.md  orchestrator-config.md  policy-yaml.md
okf/detection/: auto-inference.md  canonicalization.md  index.md  microloop-engine.md  shadow-mode.md
okf/integrations/: index.md  python-api.md
python/: pyproject.toml
python/deadband/: Cargo.toml  __init__.py  _rust.pyi  pyproject.toml
python/deadband/src/: lib.rs
python/loopless/: Cargo.toml  __init__.py  _rust.pyi  pyproject.toml
python/loopless-crewai/: __init__.py  pyproject.toml
python/loopless-langgraph/: __init__.py  pyproject.toml
python/loopless-openai-agents/: __init__.py  pyproject.toml
python/loopless/src/: lib.rs
src/: detector.rs  intervention.rs  main.rs  proxy.rs  stats.rs
src/wrap/: mod.rs  provider.rs  utils.rs
src/wrap/agents/: aider.rs  claude.rs  cline.rs  codex.rs  continue_dev.rs  cursor.rs  mod.rs  opencode.rs  vibe.rs
