[workspace]
resolver = "2"
members = [
    "crates/loopless-core",
    "crates/loopless-observation",
    "crates/loopless-adapter-langgraph",
    "crates/loopless-adapter-crewai",
    "crates/loopless-adapter-openai",
    "cli",
    "python/loopless",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1"
pyo3 = { version = "0.22", features = ["extension-module"] }
