[package]
name = "deadband-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/Devaretanmay/deadband"
homepage = "https://github.com/Devaretanmay/deadband"
description = "Deadband CLI — doctor, trace, replay, inspect"

[[bin]]
name = "deadband-legacy"
path = "src/main.rs"

[dependencies]
deadband-core = { path = "../crates/deadband-core", version = "0.1" }
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest = { version = "0.12", features = ["blocking"] }
ratatui = "0.29"
crossterm = "0.28"
