[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deadband"
version = "0.1.0"
description = "Stop your AI agents from looping - simple loop detection proxy"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Tanmay Devare", email = "tanmay@devare.com"}
]
keywords = ["ai", "agents", "loop-detection", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
deadband = "deadband.cli:main"

[project.urls]
Homepage = "https://github.com/Devaretanmay/deadband"
Documentation = "https://github.com/Devaretanmay/deadband#readme"
Repository = "https://github.com/Devaretanmay/deadband"

[tool.setuptools.packages.find]
where = ["."]
