[package]
name = "deadband-adapter-langgraph"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/Devaretanmay/deadband"
homepage = "https://github.com/Devaretanmay/deadband"
description = "Deadband integration adapter for LangGraph"

[dependencies]
deadband-core = { path = "../deadband-core", version = "0.1" }
serde_json.workspace = true
