[package]
name = "deadband-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/Devaretanmay/deadband"
homepage = "https://github.com/Devaretanmay/deadband"
description = "Core orchestrator, policy engine, intervention, and replay for Deadband"

[dependencies]
deadband-observation = { path = "../deadband-observation" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
anyhow.workspace = true
regex = "1"
microloop.workspace = true
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
