[package]
name = "deadband-observation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Observation pipeline, events, and detectors for Loopless"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
reqwest.workspace = true
anyhow.workspace = true
regex = "1"
microloop.workspace = true

[dev-dependencies]
tempfile = "3"
