[package]
name = "deadband-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/Devaretanmay/deadband"
homepage = "https://github.com/Devaretanmay/deadband"
description = "Python bindings for Deadband — Rust-powered agent execution runtime"

[lib]
name = "deadband"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
deadband-core = { path = "../../crates/deadband-core", version = "0.1" }
pyo3.workspace = true
serde_json.workspace = true
