[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "deadband-ai"
version = "0.1.0"
description = "Execution runtime for AI agents — detect loops, intervene, recover"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Tanmay Devare" }]
readme = "README.md"
homepage = "https://github.com/Devaretanmay/deadband"
repository = "https://github.com/Devaretanmay/deadband"
keywords = ["ai", "agents", "loop-detection", "observability", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
