[package]
name = "loopless-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for Loopless — Rust-powered agent execution runtime"

[lib]
name = "loopless"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
loopless-core = { path = "../../crates/loopless-core" }
pyo3.workspace = true
serde_json.workspace = true
